# mock-mate

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DESIGN.md  README.md  SYSTEM_ARCHITECTURE.md  update.sh
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  cleanup_news.py  main.py  pyproject.toml  run.sh  scheduler.py  test_rss.py
backend/api/: deps.py
backend/api/endpoints/: answers.py  questions.py  resume.py  sessions.py  trending.py  user.py
backend/database/: mockmate.db  models.py  schemas.py  session.py
backend/tests/: test_trending_relevance.py
backend/utility/: settings.py
frontend/: .gitignore  .prettierrc  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  crypto.ts  main.tsx  theme.ts  utils.ts
frontend/src/api/: api.ts
frontend/src/components/: AuthLayout.tsx  AuthWrapper.tsx  ConfirmActionModal.tsx  CustomAlert.tsx  InterviewChat.tsx  InterviewHistory.tsx  InterviewRecordDetailsModal.tsx  InterviewTraining.tsx  Layout.tsx  LoginPage.tsx  MockMateIcon.tsx  NewsQuestionCard.tsx  NewsQuestionPush.tsx  ProgressChart.tsx  RegisterPage.tsx  ResumeDrill.tsx  SuccessPage.tsx
frontend/src/components/auth/: AuthPreview.tsx
frontend/src/hooks/: useDebounce.ts  useSpeechRecognition.ts
frontend/src/pages/: Home.tsx
frontend/src/services/: newsQuestionPushService.ts
frontend/src/stores/: useAuthStore.ts  useNewsQuestionPushStore.ts
frontend/src/types/: interview.ts
frontend/src/utils/: dateTime.ts  interviewRecordDisplay.ts
shared/: interview_positions.json
(+12 files in other folders)
